# G80SXM

./: .gitignore  README.md  pyproject.toml  setup.py
ExampleData/: example_FFT.sxm  example_LineProfile.sxm  example_LineProfile2.sxm  example_TOPO.sxm  example_nc-AFM.sxm
G80SXM/: FFTPanel.py  FilterPanel.py  FitPanel.py  GridPanel.py  LineProfilePanel.py  MainPanel.py  Panel.py  STSPanel.py  __init__.py  gui.py
Python/: .g80  AIMLPanel.py  FFTPanel.py  FilterPanel.py  FitPanel.py  GridPanel.py  LineProfilePanel.py  MainPanel.py  Panel.py  STSPanel.py  gui.py  nanonispyfit.py
xyz/: Cu.xyz  DCA.xyz  HAT.xyz  HAT2CuPlanar.xyz
